Add image to zucchini page with description

--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zucchini Rollini</title>
+  <title>Zucchini Rollatini</title>
 </head>
 <body>
-  <h1>Zucchini Rollini</h1>
+  <h1>Zucchini Rollatini</h1>
+  <img src="img/zucchini.jpg" alt="a close up on cooked zucchini">
+  <h2>Description</h2>
+  <p>These zucchini rollatini are ribbons of zucchini, filled with ricotta, mozzarella, and herbs, and baked in marinara sauce, a bit like lasagna roll-ups, but without the pasta.</p>
   <a href="../index.html">Home</a>
 </body>
 </html>
