--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/zucchini.html">Zucchini Rollini</a>
+  <a href="recipes/zucchini.html">Zucchini Rollatini</a>
 </body>
 </html>
