--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -10,6 +10,23 @@
   <img src="img/zucchini.jpg" alt="a close up on cooked zucchini">
   <h2>Description</h2>
   <p>These zucchini rollatini are ribbons of zucchini, filled with ricotta, mozzarella, and herbs, and baked in marinara sauce, a bit like lasagna roll-ups, but without the pasta.</p>
+  <h2>Ingredients:</h2>
+  <ul>
+    <li>2 (12 ounce) zucchinis, sliced lengthwise into 18 (1/8-inch-thick) planks</li>
+    <li>2 tablespoons extra-virgin olive oil</li>
+    <li>1 tablespoon kosher salt, divided</li>
+    <li>1 cup whole milk ricotta cheese, patted dry</li>
+    <li>1 large egg, lightly beaten</li>
+    <li>3 tablespoons chopped fresh basil, plus more for garnish</li>
+    <li>2 teaspoons chopped fresh oregano/li>
+    <li>2 teaspoons grated lemon zest</li>
+    <li>1 teaspoon freshly ground black pepper</li>
+    <li>2 clove garlic, grated</li>
+    <li>1 1/2 cups shredded whole milk mozzarella cheese, divided</li>
+    <li>1/2 cup freshly grated Parmesan cheese, divided</li>
+    <li>cooking spray</li>
+    <li>2 cups jarred marinara sauce (such as Rao’s®), divided</li>
+  </ul>
   <a href="../index.html">Home</a>
 </body>
 </html>
