--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -27,6 +27,16 @@
     <li>cooking spray</li>
     <li>2 cups jarred marinara sauce (such as Rao’s®), divided</li>
   </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Gather all ingredients. Preheat the oven to 425 degrees F (220 degrees C) with racks in top third and lower third positions.</li>
+    <li>Toss zucchini slices with oil and 2 teaspoons salt on 2 large rimmed baking sheets; arrange in a single layer. Bake in the preheated oven until tender, about 10 minutes, rotating baking sheets from top to bottom halfway through cook time.</li>
+    <li>Remove from the oven, and let zucchini slices cool slightly, about 5 minutes. Reduce oven temperature to 375 degrees F (190 degrees C).</li>
+    <li>Meanwhile, stir together ricotta, egg, basil, oregano, lemon zest, pepper, garlic, 1 cup of the mozzarella, 1/4 cup of the Parmesan, and remaining 1 teaspoon salt in a medium bowl until combined.</li>
+    <li>Lightly coat a 13x9-inch baking dish with cooking spray. Spread 1 cup marinara sauce evenly in the bottom of the baking dish. Gently pat zucchini slices dry with paper towels. Spoon about 1 tablespoon plus 1 teaspoon ricotta mixture on 1 end of 1 zucchini slice; roll up, and place roll, seam-side down, into the marinara in the dish. Repeat process with remaining zucchini slices and ricotta mixture.</li>
+    <li>Pour remaining 1 cup marinara evenly over center of zucchini rolls, leaving roll ends exposed. Sprinkle rolls evenly with remaining 1/2 cup mozzarella and 1/4 cup Parmesan.</li>
+    <li>Bake in the preheated oven until bubbling, slightly browned, and zucchini is very tender, about 25 minutes. Let rest 10 minutes. Garnish with basil.</li>
+  </ol>
   <a href="../index.html">Home</a>
 </body>
 </html>
