--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/zucchini.html">Zucchini Rollatini</a>
+  <a href="recipes/zucchini.html">Zucchini Rollatini</a><br>
+  <a href="recipes/lasagna.html">Lasagna</a>
+  <a href="recipes/pizza.html">Pizza</a>
 </body>
 </html>
