Add images to lasagna and pizza

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Pizza</h1>
   <a href="../index.html">Home</a>
+  <img src="img/pizza.jpg" alt="A pizza" width="775">
 </body>
 </html>
