--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Odin Recipes</h1>
   <a href="recipes/zucchini.html">Zucchini Rollatini</a><br>
-  <a href="recipes/lasagna.html">Lasagna</a>
+  <a href="recipes/lasagna.html">Lasagna</a><br>
   <a href="recipes/pizza.html">Pizza</a>
 </body>
 </html>
