--- a/recipes/zucchini.html
+++ b/recipes/zucchini.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Zucchini Rollatini</h1>
-  <img src="img/zucchini.jpg" alt="a close up on cooked zucchini">
+  <img src="img/zucchini.jpg" alt="a close up on cooked zucchini" width="775">
   <h2>Description</h2>
   <p>These zucchini rollatini are ribbons of zucchini, filled with ricotta, mozzarella, and herbs, and baked in marinara sauce, a bit like lasagna roll-ups, but without the pasta.</p>
   <h2>Ingredients:</h2>
