Add description to recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h1>Pizza</h1>
-  <a href="../index.html">Home</a>
   <img src="img/pizza.jpg" alt="A pizza" width="775">
-</body>
+  <h2>Description</h2>
+  <p>Our pizza dough recipe uses simple ingredients like all-purpose flour, yeast, a little sugar, warm water, salt, and olive oil. It yields a crust that’s crisp on the outside, soft in the middle, and perfectly golden brown.</p>
+  <a href="../index.html">Home</a>
+  </body>
 </html>
