--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,18 @@
   <img src="img/lasagna.jpg" alt="A dish with a lasagna" width="775">
   <h2>Description</h2>
   <p>Lasagna, lasagna. How I love thee! It is possibly one of the most loved foods in the whole wide world, and understandably so. There is just something so sentimental about lasagna, so comforting. It evokes images of of gatherings with family and friends all around the world. It is the sort of food that is like a big warm hug, and so more-ish you want to keep digging in until you burst.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 tablespoon olive oil</li>
+    <li>1 medium yellow onion, finely chopped</li>
+    <li>1 pound lean ground beef</li>
+    <li>1/2 teaspoon kosher salt</li>
+    <li>1/4 teaspoon freshly ground black pepper</li>
+    <li>1 (24 to 25-ounce) jar marinara sauce (3 cups), such as Rao's or Newman's Own</li>
+    <li>12 ounces low-moisture mozzarella cheese, shredded (about 3 cups), divided</li>
+    <li>15 dry lasagna noodles (not no-boil, about 2/3 of a 1-pound box), divided</li>
+    <li>15 to 16 ounces whole-milk ricotta cheese (about 2 cups), divided</li>
+  </ul>
   <a href="../index.html">Home</a>
 </body>
 </html>
