--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,6 +10,15 @@
   <img src="img/pizza.jpg" alt="A pizza" width="775">
   <h2>Description</h2>
   <p>Our pizza dough recipe uses simple ingredients like all-purpose flour, yeast, a little sugar, warm water, salt, and olive oil. It yields a crust that’s crisp on the outside, soft in the middle, and perfectly golden brown.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>Heaping ½ cup pizza sauce</li>
+    <li>8 ounces fresh bocconcini mozzarella, sliced</li>
+    <li>½ cup sliced cherry tomatoes</li>
+    <li>10 fresh basil leaves</li>
+    <li>Red pepper flakes</li>
+    <li>Extra-virgin olive oil, for drizzling</li>
+  </ul>
   <a href="../index.html">Home</a>
   </body>
 </html>
