Add step-by-step guide

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,7 +10,7 @@
   <img src="img/pizza.jpg" alt="A pizza" width="775">
   <h2>Description</h2>
   <p>Our pizza dough recipe uses simple ingredients like all-purpose flour, yeast, a little sugar, warm water, salt, and olive oil. It yields a crust that’s crisp on the outside, soft in the middle, and perfectly golden brown.</p>
-  <h2>Ingredients</h2>
+  <h2>Ingredients:</h2>
   <ul>
     <li>Heaping ½ cup pizza sauce</li>
     <li>8 ounces fresh bocconcini mozzarella, sliced</li>
@@ -19,6 +19,11 @@
     <li>Red pepper flakes</li>
     <li>Extra-virgin olive oil, for drizzling</li>
   </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Preheat the oven to 500°F.</li>
+    <li>Spread the pizza sauce onto the dough. Top with the fresh mozzarella and tomatoes and bake for 10 to 12 minutes, or until the crust is browned. Remove from the oven and top with fresh basil leaves and a pinch of red pepper flakes. Drizzle with olive oil and serve.</li>
+  </ol>
   <a href="../index.html">Home</a>
   </body>
 </html>
