--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
   <img src="img/lasagna.jpg" alt="A dish with a lasagna" width="775">
   <h2>Description</h2>
   <p>Lasagna, lasagna. How I love thee! It is possibly one of the most loved foods in the whole wide world, and understandably so. There is just something so sentimental about lasagna, so comforting. It evokes images of of gatherings with family and friends all around the world. It is the sort of food that is like a big warm hug, and so more-ish you want to keep digging in until you burst.</p>
-  <h2>Ingredients</h2>
+  <h2>Ingredients:</h2>
   <ul>
     <li>1 tablespoon olive oil</li>
     <li>1 medium yellow onion, finely chopped</li>
@@ -22,6 +22,17 @@
     <li>15 dry lasagna noodles (not no-boil, about 2/3 of a 1-pound box), divided</li>
     <li>15 to 16 ounces whole-milk ricotta cheese (about 2 cups), divided</li>
   </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Preheat oven to 180°C/350°F.</li>
+    <li>Use a 33 x 22 x 7 cm / 13 x 9 x 2.5″ baking dish.</li>
+    <li>Smear a bit of Ragu on the base, then cover with lasagna sheets. Tear sheets to fit.</li>
+    <li>Spread over 2 1/2 cups of Ragu (enough to cover sheets), then drizzle over 1 cup of Cheese Sauce.</li>
+    <li>Top with lasagna sheets (Note 7). Spread with another 2 1/2 cups of Ragu, then 1 cup of Cheese Sauce. Top with lasagna sheets then repeat 1 more time.</li>
+    <li>Top with a 4th layer of lasagna sheets, then pour over the remaining Cheese Sauce.</li>
+    <li>Sprinkle with Mozzarella, then bake for 25 minutes or until golden and bubbling.</li>
+    <li>Stand for 5 to 10 minutes before cutting and serving, garnished with basil or parsley if desired.</li>
+  </ol>
   <a href="../index.html">Home</a>
 </body>
 </html>
