--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/zucchini.html">Zucchini Rollatini</a><br>
-  <a href="recipes/lasagna.html">Lasagna</a><br>
-  <a href="recipes/pizza.html">Pizza</a>
+  <ul>
+    <li><a href="recipes/zucchini.html">Zucchini Rollatini</a></li>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/pizza.html">Pizza</a></li>
+  </ul>
 </body>
 </html>
